# pointers.py

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  a.py  compile_flags.txt  gen.py  hatch.toml  hatch_build.py  mkdocs.yml  netlify.toml  pointers.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  test.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: build.yml  lint.yml  tests.yml
docs/: allocation.md  bindings.md  cpython_bindings.md  custom_bindings.md  getting_started.md  index.md  inheritance.md  making_a_program.md  movement.md  pointers.md  reference.md  under_the_hood.md  using_pointers.md  variable_pointers.md  working_by_example.md
examples/: binding_example.py  calloc_example.py  custom_binding_example.py  malloc_example.py  move_example.py  struct_example.py
pointers/: __init__.py  malloc.py  pointer.py
src/: _pointers.pyi  mod.c
src/pointers/: __init__.py  _cstd.py  _gen.py  _pointer.py  _pyapi.py  _utils.py  api_bindings.py  base_pointer.py  base_pointers.py  bindings.py  c_pointer.py  c_utils.py  calloc.py  constants.py  custom_binding.py  decay.py  exceptions.py  frozen_pointer.py  magic.py  malloc.py  object_pointer.py  pointer.py  pyobject_pointer.py  stack_pointer.py  std_structs.py  struct.py  structure.py  util.py  utils.py  var_pointer.py  version.py
tests/: test_allocation.py  test_binding.py  test_bindings.py  test_calloc.py  test_decay.py  test_malloc.py  test_pointer.py  test_struct.py  test_var_pointer.py
