[build-system]
requires = ["hatchling", "setuptools", "find-libpython"]
build-backend = "hatchling.build"

[project]
name = "pointers.py"
description = 'Bringing the hell of pointers to Python.'
readme = "README.md"
requires-python = ">=3.6"
keywords = ["python", "pointers"]
authors = [
    { name = "ZeroIntensity", email = "zintensitydev@gmail.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "typing_extensions",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://pointers.zintensity.dev"
Issues = "https://github.com/ZeroIntensity/pointers.py/issues"
Source = "https://github.com/ZeroIntensity/pointers.py"

[tool.ward]
path = ["tests"]
capture-output = true
order = "standard"
test-output-style = "test-per-line"
fail-limit = 5
progress-style = ["bar"]
