[build-system]
requires = ["setuptools", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "pointers.py"
keywords = ["python", "pointers"]
authors = [
    { name = "ZeroIntensity", email = "zintensitydev@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "typing_extensions",
]
version = "3.0.1"

[project.urls]
Documentation = "https://pointers.zintensity.dev"
Issues = "https://github.com/ZeroIntensity/pointers.py/issues"
Source = "https://github.com/ZeroIntensity/pointers.py"

[tool.ward]
path = ["tests"]
capture-output = true
order = "standard"
test-output-style = "test-per-line"
fail-limit = 5
progress-style = ["bar"]
